tests/NormalTests/paczka1/small_fuzzy/68666995.err
Error in line 8: R2rR9H A545 31,5
Error in line 9: uvcjz S399 71,8
Error in line 14: uvcjz A545 47,5
